// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <a
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
        >
          <span />
        </a>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__labels___1MAdp"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
          >
            CODE
          </p>
        </div>
        <ChallengeLinks
          challenge={
            Object {
              "status": "ACTIVE",
              "subTrack": "CODE",
              "track": "DEVELOP",
              "userAction": "Appeal",
              "userDetails": Object {
                "roles": Array [
                  "abcdefg",
                  "hijklmn",
                  "opqrst",
                  "uvwxyz",
                  "1234567890",
                  "0987654321",
                  "abcdefghijklmnopqrstuvwxyz",
                ],
              },
            }
          }
          viewMode="tile"
        />
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-card__bottom___2_1C6"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__stalled-challenge___3jV3F"
          >
            This challenge is currently paused.
          </div>
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
          >
            <a
              className="tc-btn tc-btn-s tc-btn-wide tc-btn-ghost src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4"
              href="https://software.topcoder-dev.com/review/actions/ViewProjectDetails?pid=undefined"
            >
              View Scorecards
            </a>
          </div>
        </div>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            abcdefg, hijklmn, opqrst, uvwxyz, 1234567890, 0987654321,...
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <a
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
        >
          <span />
        </a>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
        >
          CODE
        </p>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            abcdefg, hijklmn, opqrst, uvwxyz, 1234567890, 0987654321,...
          </span>
        </p>
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-info___3Kys1"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__ends-in___1c9ID"
          >
            This challenge is currently paused.
          </p>
        </div>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
        >
          <a
            className="tc-btn tc-btn-s tc-btn-wide tc-btn-ghost src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4"
            href="https://software.topcoder-dev.com/review/actions/ViewProjectDetails?pid=undefined"
          >
            View Scorecards
          </a>
        </div>
      </div>
      <ChallengeLinks
        challenge={
          Object {
            "status": "ACTIVE",
            "subTrack": "CODE",
            "track": "DEVELOP",
            "userAction": "Appeal",
            "userDetails": Object {
              "roles": Array [
                "abcdefg",
                "hijklmn",
                "opqrst",
                "uvwxyz",
                "1234567890",
                "0987654321",
                "abcdefghijklmnopqrstuvwxyz",
              ],
            },
          }
        }
        viewMode="list"
      />
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 3`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <span
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          title={undefined}
        />
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__labels___1MAdp"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
          >
            CODE
          </p>
        </div>
        <ChallengeLinks
          challenge={
            Object {
              "groupLabel": "do",
              "isPrivate": true,
              "status": "ACTIVE",
              "subTrack": "CODE",
              "track": "DEVELOP",
              "userAction": "Submit",
              "userCurrentPhaseEndTime": true,
              "userDetails": Object {
                "roles": Array [
                  "abcdefg",
                ],
              },
            }
          }
          viewMode="tile"
        />
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-card__bottom___2_1C6"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-calendar___2evrd"
          >
            <p
              className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__ends-in___1c9ID"
            >
              Ends In
            </p>
            <p
              className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__time-remaining___30FrH"
            />
            <p
              className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__unit-of-time___1Hug2"
            />
          </div>
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
          >
            <a
              className="tc-btn tc-btn-s tc-btn-wide tc-btn-ghost src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4"
              href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
            >
              Submit
            </a>
            <a
              className="tc-btn tc-btn-s tc-btn-wide src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__btn-danger___1OQIc"
              href="https://software.topcoder-dev.com/review/actions/Unregister?pid=undefined"
            >
              Unregister
            </a>
          </div>
        </div>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            abcdefg
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 4`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <span
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          title={undefined}
        />
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
        >
          CODE
        </p>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            abcdefg
          </span>
        </p>
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-info___3Kys1"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__ends-in___1c9ID"
          >
            Ends undefined
          </p>
        </div>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
        >
          <a
            className="tc-btn tc-btn-s tc-btn-wide tc-btn-ghost src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4"
            href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
          >
            Submit
          </a>
          <a
            className="tc-btn tc-btn-s tc-btn-wide src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__btn-danger___1OQIc"
            href="https://software.topcoder-dev.com/review/actions/Unregister?pid=undefined"
          >
            Unregister
          </a>
        </div>
      </div>
      <ChallengeLinks
        challenge={
          Object {
            "groupLabel": "do",
            "isPrivate": true,
            "status": "ACTIVE",
            "subTrack": "CODE",
            "track": "DEVELOP",
            "userAction": "Submit",
            "userCurrentPhaseEndTime": true,
            "userDetails": Object {
              "roles": Array [
                "abcdefg",
              ],
            },
          }
        }
        viewMode="list"
      />
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 5`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <span
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          title={undefined}
        />
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__labels___1MAdp"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
          >
            CODE
          </p>
        </div>
        <ChallengeLinks
          challenge={
            Object {
              "groupLabel": "do",
              "isLate": true,
              "isPrivate": true,
              "status": "ACTIVE",
              "subTrack": "CODE",
              "track": "DEVELOP",
              "userAction": "Submit",
              "userCurrentPhaseEndTime": true,
              "userDetails": Object {
                "roles": Array [
                  "abcdefg",
                ],
              },
            }
          }
          viewMode="tile"
        />
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-card__bottom___2_1C6"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-calendar___2evrd src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-late___cyxLq"
          >
            <p
              className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__ends-in___1c9ID"
            >
              Late for
            </p>
            <p
              className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__time-remaining___30FrH"
            />
            <p
              className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__unit-of-time___1Hug2"
            />
          </div>
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
          >
            <a
              className="tc-btn tc-btn-s tc-btn-wide tc-btn-ghost src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4"
              href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
            >
              Submit
            </a>
            <a
              className="tc-btn tc-btn-s tc-btn-wide src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__btn-danger___1OQIc"
              href="https://software.topcoder-dev.com/review/actions/Unregister?pid=undefined"
            >
              Unregister
            </a>
          </div>
        </div>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            abcdefg
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 6`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <span
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          title={undefined}
        />
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
        >
          CODE
        </p>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            abcdefg
          </span>
        </p>
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-info___3Kys1 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-late___cyxLq"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__ends-in___1c9ID"
          >
            Ends undefined
          </p>
        </div>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
        >
          <a
            className="tc-btn tc-btn-s tc-btn-wide tc-btn-ghost src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4"
            href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
          >
            Submit
          </a>
          <a
            className="tc-btn tc-btn-s tc-btn-wide src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__btn-danger___1OQIc"
            href="https://software.topcoder-dev.com/review/actions/Unregister?pid=undefined"
          >
            Unregister
          </a>
        </div>
      </div>
      <ChallengeLinks
        challenge={
          Object {
            "groupLabel": "do",
            "isLate": true,
            "isPrivate": true,
            "status": "ACTIVE",
            "subTrack": "CODE",
            "track": "DEVELOP",
            "userAction": "Submit",
            "userCurrentPhaseEndTime": true,
            "userDetails": Object {
              "roles": Array [
                "abcdefg",
              ],
            },
          }
        }
        viewMode="list"
      />
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 7`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <a
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
        >
          <span />
        </a>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__labels___1MAdp"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
          >
            CODE
          </p>
        </div>
        <ChallengeLinks
          challenge={
            Object {
              "isSubmitter": true,
              "status": "ACTIVE",
              "subTrack": "CODE",
              "track": "DEVELOP",
              "userAction": "Appeal",
              "userDetails": Object {
                "roles": Array [],
              },
            }
          }
          viewMode="tile"
        />
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-card__bottom___2_1C6"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__stalled-challenge___3jV3F"
          >
            This challenge is currently paused.
          </div>
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
          >
            <a
              className="tc-btn tc-btn-s tc-btn-wide tc-btn-ghost src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4"
              href="https://software.topcoder-dev.com/review/actions/ViewProjectDetails?pid=undefined"
            >
              View Scorecards
            </a>
            <a
              className="tc-btn tc-btn-s tc-btn-wide src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__btn-danger___1OQIc"
              href="https://software.topcoder-dev.com/review/actions/EarlyAppeals?pid=undefined"
            >
              Complete Appeals
            </a>
          </div>
        </div>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span />
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 8`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <a
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
        >
          <span />
        </a>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
        >
          CODE
        </p>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span />
        </p>
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-info___3Kys1"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__ends-in___1c9ID"
          >
            This challenge is currently paused.
          </p>
        </div>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
        >
          <a
            className="tc-btn tc-btn-s tc-btn-wide tc-btn-ghost src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4"
            href="https://software.topcoder-dev.com/review/actions/ViewProjectDetails?pid=undefined"
          >
            View Scorecards
          </a>
          <a
            className="tc-btn tc-btn-s tc-btn-wide src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tc-btn___2m_Kz src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submit___VryN4 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__btn-danger___1OQIc"
            href="https://software.topcoder-dev.com/review/actions/EarlyAppeals?pid=undefined"
          >
            Complete Appeals
          </a>
        </div>
      </div>
      <ChallengeLinks
        challenge={
          Object {
            "isSubmitter": true,
            "status": "ACTIVE",
            "subTrack": "CODE",
            "track": "DEVELOP",
            "userAction": "Appeal",
            "userDetails": Object {
              "roles": Array [],
            },
          }
        }
        viewMode="list"
      />
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 9`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <a
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
        >
          <span />
        </a>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__labels___1MAdp"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
          >
            CODE
          </p>
        </div>
        <ChallengeLinks
          challenge={
            Object {
              "status": "ACTIVE",
              "subTrack": "CODE",
              "track": "DEVELOP",
              "userAction": "Submitted",
              "userDetails": Object {},
            }
          }
          viewMode="tile"
        />
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-card__bottom___2_1C6"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__stalled-challenge___3jV3F"
          >
            This challenge is currently paused.
          </div>
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
          >
            <div
              className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submitted___1dPYX"
            >
              Submitted
            </div>
          </div>
        </div>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            No assigned role.
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 10`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <a
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
        >
          <span />
        </a>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
        >
          CODE
        </p>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            No assigned role.
          </span>
        </p>
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-info___3Kys1"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__ends-in___1c9ID"
          >
            This challenge is currently paused.
          </p>
        </div>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
        >
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submitted___1dPYX"
          >
            Submitted
          </div>
        </div>
      </div>
      <ChallengeLinks
        challenge={
          Object {
            "status": "ACTIVE",
            "subTrack": "CODE",
            "track": "DEVELOP",
            "userAction": "Submitted",
            "userDetails": Object {},
          }
        }
        viewMode="list"
      />
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 11`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__tile-view___1d1Ju src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <a
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
        >
          <span />
        </a>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__labels___1MAdp"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
          >
            CODE
          </p>
        </div>
        <ChallengeLinks
          challenge={
            Object {
              "status": "ACTIVE",
              "subTrack": "CODE",
              "track": "DEVELOP",
              "userAction": "Registered",
              "userDetails": Object {},
            }
          }
          viewMode="tile"
        />
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-card__bottom___2_1C6"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__stalled-challenge___3jV3F"
          >
            This challenge is currently paused.
          </div>
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
          >
            <div
              className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submitted___1dPYX"
            >
              Registered
            </div>
          </div>
        </div>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            No assigned role.
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 12`] = `
<div
  className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-tile___3pXGl src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0"
>
  <div
    className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge___2sq5U src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__list-view___2UnC0 src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__DEVELOP___xdjB2"
  >
    <div
      className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__active-challenge___2iIqh"
    >
      <header>
        <a
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__name___3uS0q"
          href="https://www.topcoder-dev.com/challenge-details/undefined/?type=develop"
        >
          <span />
        </a>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__subtrack-color___2WVzx"
        >
          CODE
        </p>
        <p
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__roles___3ndac"
        >
          <span>
            Role:
          </span>
          <span>
            No assigned role.
          </span>
        </p>
      </header>
      <div
        className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-details___DJz2Z"
      >
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__challenge-info___3Kys1"
        >
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__currentPhase___PRydF"
          />
          <p
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__ends-in___1c9ID"
          >
            This challenge is currently paused.
          </p>
        </div>
        <div
          className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__phase-action___1CEL_"
        >
          <div
            className="src-shared-components-Dashboard-MyChallenges-ChallengeTile-___style__submitted___1dPYX"
          >
            Registered
          </div>
        </div>
      </div>
      <ChallengeLinks
        challenge={
          Object {
            "status": "ACTIVE",
            "subTrack": "CODE",
            "track": "DEVELOP",
            "userAction": "Registered",
            "userDetails": Object {},
          }
        }
        viewMode="list"
      />
    </div>
  </div>
</div>
`;
